--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,3 @@
-// Lambda表达式
-plugins {
-    id "me.tatarka.retrolambda" version "3.2.4"
-}
-
 apply plugin: 'com.android.application'
 
 android {
@@ -11,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "clwang.chunyu.me.wcl_update_request_demo"
-        minSdkVersion 17
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -23,25 +18,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    // 使用Java1.8
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+//    compile project(':wcl-update-app')
+    compile 'me.chunyu.android:cy-update-app-utils:0.0.2'
+
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
 
     compile 'com.jakewharton:butterknife:7.0.1' // ButterKnife标注
-
-    compile 'io.reactivex:rxandroid:1.1.0' // RxAndroid
-    compile 'io.reactivex:rxjava:1.1.0' // 推荐同时加载RxJava
-
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2' // Retrofit网络处理
-    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2' // Retrofit的rx解析库
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2' // Retrofit的gson库
 }
