--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,17 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
+        maven {
+            url "http://maven.chunyu.mobi/content/groups/public/"
+            credentials {
+                username maven_user
+                password maven_password
+            }
+        }
+    }
+
+    repositories {
         jcenter()
     }
 }
