--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-//    compile project(':wcl-update-app')
+    // 使用模块
+    compile project(':wcl-update-app')
+
+    // 使用Maven
     compile 'me.chunyu.android:cy-update-app-utils:0.0.2'
 
     testCompile 'junit:junit:4.12'
