--- a/wcl-update-app/build.gradle
+++ b/wcl-update-app/build.gradle
@@ -1,5 +1,15 @@
 buildscript {
-    apply from: 'https://git.chunyu.me/android/gradle_base/raw/master/gradle/chunyu_build_script.gradle'
+//    apply from: 'https://git.chunyu.me/android/gradle_base/raw/master/gradle/chunyu_build_script.gradle'
+    ext {
+        androidPlugin = "com.android.tools.build:gradle:1.3.0"
+    }
+
+    def mavenCentral = {
+        mavenCentral()
+    }
+
+    project.buildscript.repositories(mavenCentral)
+
     dependencies {
         //noinspection GroovyAssignabilityCheck
         classpath androidPlugin
@@ -16,7 +26,7 @@ apply plugin: 'com.android.library'
 ext {
     PUBLISH_GROUP_ID = 'me.chunyu.android'
     PUBLISH_ARTIFACT_ID = 'cy-update-app-utils'
-    PUBLISH_VERSION = '0.0.2'
+    PUBLISH_VERSION = '0.0.4'
     PUBLISH_IS_JAR = false
 }
 
@@ -24,11 +34,11 @@ ext {
 //  必需
 //apply from: 'https://git.chunyu.me/android/gradle_base/raw/master/gradle/chunyu_base.gradle'
 //  如果上传maven，则需要配置这行
-//apply from: 'https://git.chunyu.me/android/gradle_base/raw/master/gradle/mvn_release.gradle'
+apply from: 'https://git.chunyu.me/android/gradle_base/raw/master/gradle/mvn_release.gradle'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 14
@@ -54,7 +64,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
 
     compile 'com.jakewharton:butterknife:7.0.1' // ButterKnife标注
 
@@ -65,3 +75,16 @@ dependencies {
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2' // Retrofit的rx解析库
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2' // Retrofit的gson库
 }
+
+repositories {
+    mavenCentral()
+    maven {
+        url "http://maven.chunyu.mobi/content/groups/public/"
+        credentials {
+            username maven_user
+            password maven_password
+        }
+    }
+}
+
+
